# sss-stableswap

./: .gitignore  README.md  canister_ids.json  dfx.json
canisters/vaultpair/: Cargo.toml
canisters/vaultpair/src/: api.rs  error.rs  events.rs  icrc.rs  ledger_book.rs  lib.rs  state.rs  stats.rs  types.rs  vaultpair.did
canisters/vaultpair/src/activity/: mod.rs
canisters/vaultpair/src/assets/: mod.rs
canisters/vaultpair/src/explore/: mod.rs
canisters/vaultpair/src/math/: stableswap.rs
canisters/vaultpair/src/positions/: mod.rs
canisters/vaultpair/src/swap/: mod.rs
canisters/www/: index.html  package-lock.json  package.json  vite.config.ts
canisters/www/src/: main.tsx  vaultpair.did.js
canisters/www/src/api/: actor.ts  calls.ts  token.ts
canisters/www/src/app/: router.tsx  ui.css
canisters/www/src/auth/: AuthContext.tsx  ii.ts
canisters/www/src/components/: AmountInput.tsx  LoginBadge.tsx
canisters/www/src/pages/Assets/: index.tsx
canisters/www/src/pages/Explore/: index.tsx
canisters/www/src/pages/Liquidity/: index.tsx
canisters/www/src/pages/Swap/: index.tsx
canisters/www/src/types/: candid.d.ts
scripts/: copy-did.mjs  init_sss05.sh  write-env.sh
src/declarations/vaultpair/: index.d.ts  index.js  vaultpair.did.d.ts
