[package]
name = "vaultpair"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

# ---- P1: curve invariant dependencies ----
num-bigint = "0.4"
num-traits = "0.2"

sha2 = "0.10"
crc32fast = "1.3"
futures = "0.3"
